--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">PMA</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="hide_password">Hide password</string>
